--- a/posts.html
+++ b/posts.html
@@ -38,7 +38,7 @@ header-mask: 0.5
                             <h3 class="listing-seperator">{{ mon }}月</h3>
                         {% endif %}
                         <li class="listing-item">
-                            <li><span style="color: #aaa;font-family: Monaco, "Courier New", monospace;font-size: 80%;">{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+                            <span style="color: #aaa;font-family: Monaco, "Courier New", monospace;font-size: 80%;">{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
                         </li>
                     {% endfor %}
                 </ul>
