--- a/about.html
+++ b/about.html
@@ -18,8 +18,7 @@ header-img: "img/about-me-header.jpg"
     <!--copied from markdown -->
     <blockquote><p>If somebody offers you an amazing opportunity but you are not sure you can do it, say yes – then learn how to do it later!</p></blockquote>
 
-    <p>Hi，我是<strong>Jimmy</strong>，目前是一名程序员。现在正努力往写作方向发展。很感谢您能看到我的博客，在这里我将记录自己的所思所想。如果您发现文章中有错误或者
-    不恰当的地方,欢迎您随时跟我联系。Thanks~
+    <p>Hi，我是<strong>Jimmy</strong>，目前是一名程序员。现在正努力往写作方向发展。很感谢您能看到我的博客，在这里我将记录自己的所思所想。如果您发现文章中有错误或者不恰当的地方,欢迎您随时跟我联系。Thanks~
     </p> 
     
     
